# picloud

./: pyproject.toml
hello-world/: package-lock.json
hello-world/src/: App.vue
hello-world/src/components/: UploadFile.vue
src/picloud/: main.py
src/util/: __init__.py  crypto.py  file.py  network.py
tests/: test.py
